# MVP-HACATON2025

./: README.md  bot.py  pyproject.toml  run.py
backend/: .env.example  database.db  pyproject.toml  requirements.txt
backend/bot/common/: text_for_bot.py
backend/bot/kbds/: inline.py
backend/bot/routers/: menu_processing.py  user_group.py  user_private.py
backend/bot/utils/: text_inline.py
backend/src/: main.py
backend/src/api/information/: crud.py
backend/src/api/tasks/: crud.py
backend/src/api/users/: dependencies.py
backend/src/api/v1/pages/: views.py
backend/src/api/v1/tasks/: schemas.py
backend/src/api/v1/tasks_daily/: crud.py  schemas.py  views.py
backend/src/api/v1/users/: views.py
backend/src/core/models/: base.py  information.py  user.py
backend/src/core/utils/: templates.py
bot/common/: bot_cmds_list.py
bot/filters/: chat_type_filter.py
bot/kbds/: inline.py
bot/models/: admin.py
bot/routers/: admin_private.py  menu_processing.py  user_private.py
frontend/static/css/: style_auth.css  style_index.css
frontend/static/js/: auth.js
frontend/templates/: auth.html  index.html
src/: main.py
src/api/auth/: authx_config.py  crud.py  schemas.py  views.py
src/api/information/: schemas.py  views.py
src/api/tasks/: crud.py  schemas.py  views.py
src/api/tasks_daily/: crud.py  views.py
src/api/users/: crud.py
src/core/: config.py
src/core/models/: __init__.py  admin.py  db_helper.py  task.py  task_daily.py  user.py
